[metadata]
name = Phantomata-Phantom2792
version = 0.0.1
author = Phantom2792
author_email = shobhit.mudkhedkar@gmail.com
description = A Python Library to formulate Turing Machines and other automata.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Phantom2792/Phantomata
project_urls =
    Bug Tracker = https://github.com/Phantom2792/Phantomata/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src